code submitted for deployment

--- a/BulkyWebLatest/appsettings.json
+++ b/BulkyWebLatest/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=ATIF_DELL\\SQLEXPRESS;Database=BulkyLatest1;Trusted_Connection=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=ATIF_DELL\\SQLEXPRESS;Database=BulkyLatest;Trusted_Connection=True;TrustServerCertificate=True;"
 
     },
     "Stripe": {
