--- a/BulkyWebLatest/appsettings.Production.json
+++ b/BulkyWebLatest/appsettings.Production.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=tcp:bulky1.database.windows.net,1433;Initial Catalog=bulky;Persist Security Info=False;User ID=sqladmin;Password=admin123_;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=false;Connection Timeout=30;"
+        "DefaultConnection": "Server=tcp:bulky1.database.windows.net,1433;Initial Catalog=bulky;Persist Security Info=False;User ID=sqladmin;Password=admin123_;"
 
     },
     "Stripe": {
